# darwin_ads3

./: .gitignore  README.md
darwin-backend/: coman.txt  comand.md  docker-compose.yml  pyproject.toml  requirements.txt
darwin-backend/app/: main.py
darwin-backend/app/api/: deps.py
darwin-backend/app/api/routers/: campaigns.py  darwin.py  debug.py  metrics_overview.py  scheduler.py  variants.py
darwin-backend/app/api/schemas/: ai.py  campaigns.py  darwin.py  errors.py  metrics.py  variants.py
darwin-backend/app/core/: errors.py  scheduler.py
darwin-backend/app/db/: models.py  session.py
darwin-backend/app/db/migrations/: env.py
darwin-backend/app/db/migrations/versions/: 51d99727a12c_init.py  a569b47b8e5e_scheduler_settings.py
darwin-backend/app/db/repos/: campaigns_repo.py  logs_repo.py  metrics_repo.py  scheduler_repo.py  variants_repo.py
darwin-backend/app/services/: cycle_service.py  darwin_service.py  fitness_service.py  openai_service.py  scheduler_manager.py
darwin-backend/app/services/providers/: meta_provider.py
darwin-frontend/: README.md  package-lock.json  package.json
darwin-frontend/app/api/_lib/: proxy.ts
darwin-frontend/app/api/campaigns/: route.ts
darwin-frontend/app/campaigns/: page.tsx
darwin-frontend/app/campaigns/new/: page.tsx
darwin-frontend/app/dashboard/: page.tsx
darwin-frontend/components/: CampaignCreateView.tsx  CampaignDashboard.tsx  CampaignTable.tsx  CampaignsDashboardView.tsx  CreateCampaignPanel.tsx  MetricCard.tsx  Navbar.tsx
darwin-frontend/lib/: contracts.ts
darwin-frontend/services/: api.ts
(+9 files in other folders)
